major refactor into introduction component and deferring of api calls

--- a/MixedDbDistributionTask.Dashboard/Pages/Dashboard.razor
+++ b/MixedDbDistributionTask.Dashboard/Pages/Dashboard.razor
@@ -6,57 +6,45 @@
 @inject DashboardViewModel ViewModel
 
 <div class="w-100 h-100 d-flex flex-column justify-content-center align-items-center">
-    <span>Hey, there! :)</span>
+    <div class="w-50 d-flex flex-column justify-content-center align-items-center">
+        <span class="mb-4">Hey, there! :)</span>
+        @*         <div class="w-75 mb-4" style="border-bottom: 1px solid #888888;"></div> *@
+    </div>
 
-    @if (!ViewModel.MasterAvailable)
+    @if (ViewModel.Introduction == null)
     {
-        <div class="d-flex flex-column justify-content-center align-items-center">
-            <span>No master database seems to have been created. Create a new master database now?</span>
-            <button class="" style="width: fit-content;" @onclick="ViewModel.CreateMasterDatabase">Go!</button>
-        </div>
+        
     }
-    @*     else if (ViewModel.AvailableTenants.Length == 0)
+    else if (_showIntroduction)
     {
-        <div class="flex flex-column justify-content-center">
-            <span>Would you also like to generate a tenant right away?</span>
-            <div class="flex flex-row justify-content-center gap-4">
-                <button @onclick="(e) => ViewModel.CreateTenantDatabase()">Yes!</button>
-                <button @onclick="CreateMasterDatabase">No!</button>
-            </div>
-        </div>
-    } *@
-
-    @if (ViewModel.ShowDebugDataPrompt)
-    {
-        <div class="d-flex flex-column justify-content-center align-items-center">
-            <span>Would you also like to generate some debug data? :)</span>
-            <span>You can also generate more data later.</span>
-            <div class="d-flex flex-row justify-content-center gap-4">
-                <button @onclick="(e) => HandleDebugDataCreation(true)">Yes!</button>
-                <button @onclick="(e) => HandleDebugDataCreation(false)">No!</button>
-            </div>
-        </div>
+        <Intro Introduction="ViewModel.Introduction"/>
     }
     else
     {
         <div class="d-flex flex-column gap-2">
             @foreach (var tenant in ViewModel.AvailableTenants)
             {
-                <span>@tenant</span>
+                <span class="mylink">@tenant</span>
             }
         </div>
     }
 </div>
 
 @code {
+    private bool _showIntroduction = false;
+
     protected override void OnInitialized()
     {
         ViewModel.DatabaseAvailabilityChanged += HandleDatabaseAvailabilityChanged;
+        ViewModel.Introduction.Completed += HandleIntroductionCompleted;
+
+        if (!ViewModel.Introduction.IsCompleted) { _showIntroduction = true; };
     }
 
     public void Dispose()
     {
         ViewModel.DatabaseAvailabilityChanged -= HandleDatabaseAvailabilityChanged;
+        ViewModel.Introduction?.Completed -= HandleIntroductionCompleted;
     }
 
     private void HandleDebugDataCreation(bool create)
@@ -71,6 +59,12 @@
                 await InvokeAsync(StateHasChanged);
             });
         }
+    }
+
+    private void HandleIntroductionCompleted(object? sender, EventArgs args)
+    {
+        _showIntroduction = false;
+        InvokeAsync(StateHasChanged);
     }
 
     private void HandleDatabaseAvailabilityChanged(object? sender, EventArgs args)
