--- a/MixedDbDistributionTask.Dashboard/Pages/Dashboard.razor.css
+++ b/MixedDbDistributionTask.Dashboard/Pages/Dashboard.razor.css
@@ -1,10 +1,29 @@
 ﻿/* color are all ripped bs5 colors */
 
+.mylink.selected {
+    color: #0d6efd;
+    text-decoration: underline;
+}
+
 .mylink:hover {
     color: #6ea8fe;
     cursor: pointer;
 }
 
-.mylink:active {
-    color: #0d6efd;
+.querylink.selected {
+    color: #20c997;
 }
+
+.querylink:active {
+    color: #198754 !important;
+    text-decoration: underline;
+}
+
+.querylink:hover {
+    color: #20c997;
+    cursor: pointer;
+}
+
+/*.mylink:active {
+    color: #0d6efd;
+}*/
