--- a/MixedDbDistributionTask.Dashboard/Pages/Dashboard.razor
+++ b/MixedDbDistributionTask.Dashboard/Pages/Dashboard.razor
@@ -39,8 +39,12 @@
                     @if (ViewModel.HasSelection)
                     {
                         <div class="d-flex flex-column flex-grow-1 justify-content-center align-items-start border p-2">
-                            <span style="margin-bottom: 2rem;">@ViewModel.SelectedDatabase selected!</span>
-                            <div class="d-flex flex-column gap-1">
+                            <span>@ViewModel.SelectedDatabase selected!</span>
+                            <div class="d-flex flex-row justify-content-center align-items-center gap-2">
+                                <label for="api-key-input">Enter API key here:</label>
+                                <input id="api-key-input" @bind="ViewModel.ApiKey" />
+                            </div>
+                            <div class="d-flex flex-column gap-1 mt-3">
                                 @foreach (var query in ViewModel.AvailableQueries.Select((value, i) => new { i, value })) @* because for loops are still "bugged" (probably intended behaviour) *@
                                 {
                                     <span class="querylink @(GetQuerySelectedCss(query.value))" @onclick="() => ViewModel.RequestQuery(query.i)">@query.value</span>
