--- a/MixedDbDistributionTask.Dashboard/Pages/Intro.razor
+++ b/MixedDbDistributionTask.Dashboard/Pages/Intro.razor
@@ -27,10 +27,15 @@ else if (Introduction.Stage == 1)
 else if (Introduction.Stage == 2)
 {
     <div class="d-flex flex-column justify-content-center gap-4">
-        <span>Enter tenant's names to create a database for, separated by commas (and not using any whitespace) :D</span>
-        <span style="font-size: 0.75rem; color: dimgray">If you enter anything invalid the backend will sadly explode.</span>
-        <input type="text" @bind-value="_tenantCreationIds" />
-        <button @onclick="(e) => Introduction.Advance(_tenantCreationIds)">Looks good!</button>
+        <div class="d-flex flex-column justify-content-center gap-1">
+            <span>Enter tenant's names to create a database for, separated by commas (and not using any whitespace) :D</span>
+            <span style="font-size: 0.75rem; color: dimgray">If you enter anything invalid the backend will sadly explode.</span>
+            <span style="font-size: 0.75rem; color: dimgray">I already wrote down some inspiration. Feel free to change them. :)</span>
+        </div>
+        <div class="d-flex flex-column justify-content-center gap-1">
+            <input type="text" @bind-value="_tenantCreationIds" />
+            <button @onclick="(e) => Introduction.Advance(_tenantCreationIds)">Looks good!</button>
+        </div>
     </div>
 }
 else if (Introduction.Stage == 3)
@@ -68,7 +73,7 @@ else if (Introduction.Stage == 3)
 }
 else if (Introduction.IsCompleted)
 {
-@*     <div class="d-flex flex-column justify-content-center align-items-center">
+    @*     <div class="d-flex flex-column justify-content-center align-items-center">
         <span>All set! :)</span>
         <span>Processing your selection now...</span>
     </div> *@
@@ -82,7 +87,7 @@ else if (Introduction.IsCompleted)
     [Parameter] public Introduction Introduction { get; set; } = default!;
 
     private int _checkBoxSelection = 0;
-    private string _tenantCreationIds = string.Empty;
+    private string _tenantCreationIds = "henara,simonssoftware"; //initial values for convenience
 
     private void HandleCheckbox(int pos, ChangeEventArgs args)
     {
